--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.container {
-  width: 80%;
-  margin: 50px auto;
-}
-
 .button {
   background: #2196f3;
   padding: 10px 20px;
@@ -49,11 +44,11 @@
 
 /* Create the circle loader with pure CSS */
 .loader {
-  width: 50px;
-  height: 50px;
-  border: 8px solid #ddd;
-  border-top: 8px solid #2196f3;
-  border-bottom: 8px solid #2196f3;
+  width: 25px;
+  height: 25px;
+  border: 5px solid #ddd;
+  border-top: 5px solid red;
+  border-bottom: 5px solid red;
   border-radius: 50%;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
